--- a/css/styles.css
+++ b/css/styles.css
@@ -55,13 +55,13 @@ body {
 /* --- Mobile Styles --- */
 @media (max-width: 768px) {
     h1, h2, h3, h4, h5, h6 {
-        font-size: 2.5rem;
+        font-size: 3.5rem;
     }
     .high-score-menu {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
     }
     .start-button {
-        font-size: 1.5rem;
-        padding: 10px 20px;
+        font-size: 2rem;
+        padding: 15px 25px;
     }
 }
